--- a/ExtJSDemo/src/main/webapp/resources/css/app.css
+++ b/ExtJSDemo/src/main/webapp/resources/css/app.css
@@ -1,7 +1,8 @@
-#header {
-	background-color: #1E90FF;
-	color: black;
+#header, a {
+	background-color: #214674;
+	color: white;
 	text-align: center;
+	font-family: tahoma,arial,verdana,sans-serif;
 	height: 70px;
 }
 
@@ -15,11 +16,14 @@ td {
 }
 
 .td-left-data {
-	font-size: 20px;
 	text-align: left;
+	font-size: 18px;
+	font-weight: bold;
 	vertical-align: top;
 }
 
 .td-right-data {
 	text-align: right;
+	font-size: 16px;
+	font-weight: normal;
 }
